--- a/day01/index.html
+++ b/day01/index.html
@@ -1,3 +1,11 @@
-# webdev Lecture 2025
-## 학번 :20222296
-## 이름 : Lim woohyeok
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    "안녕하세요"
+</body>
+</html>
