--- a/day05/ex04.html
+++ b/day05/ex04.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>document</title>
 </head>
-<body
+<body>
     <input type="range" min="0" max="100" value="50" id="inp-volume"/>
     <p>볼륨 : 0%</p>
 
@@ -22,3 +22,6 @@
             volumeTxt.innerText = 'volue : ${inpvolume.value }% OK'
         })
     </script>
+
+    </body>
+    </html>
