--- a/day06/ex01.html
+++ b/day06/ex01.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>퀴즈 day06</title>
+  <style>
+    body {
+      display: flex;
+      flex-direction: column;
+      align-items: center; /* 가운데 정렬 */
+      margin-top: 50px;
+    }
+
+    .box {
+      height: 60px;
+      background-color: #f0f0f0;
+      border: 1px solid #555;
+      margin-bottom: 10px; /* 각 상자 간격 */
+    }
+
+    .box1 {
+      width: 200px;
+    }
+
+    .box2 {
+      width: 300px;
+      margin-left: -50px; /* 살짝 중앙 정렬 보정 */
+    }
+
+    .box3 {
+      width: 400px;
+      margin-left: -100px; /* 더 넓은 만큼 보정 */
+    }
+  </style>
 </head>
 <body>
-    
+  <div class="box box1"></div>
+  <div class="box box2"></div>
+  <div class="box box3"></div>
 </body>
 </html>
