--- a/day06/ex01.html
+++ b/day06/ex01.html
@@ -15,21 +15,22 @@
       height: 60px;
       background-color: #f0f0f0;
       border: 1px solid #555;
-      margin-bottom: 10px; /* 각 상자 간격 */
+      margin-bottom: 1px; /* 각 상자 간격 */
     }
 
     .box1 {
       width: 200px;
+       margin-left: -50px
     }
 
     .box2 {
-      width: 300px;
-      margin-left: -50px; /* 살짝 중앙 정렬 보정 */
+      width: 280px;
+      margin-left: -70px; /* 살짝 중앙 정렬 보정 */
     }
 
     .box3 {
-      width: 400px;
-      margin-left: -100px; /* 더 넓은 만큼 보정 */
+      width: 350px;
+      margin-left: -80px; /* 더 넓은 만큼 보정 */
     }
   </style>
 </head>
