--- a/test/test01.html
+++ b/test/test01.html
@@ -13,12 +13,14 @@
         font-weight: bold;
         font-family: "press center 2p", cursive;
         color : white;
+        font-style: inherit;
 
     }
     h1 {
         color: white;
         text-shadow: 2px 2px 4px #000000;
         margin-bottom: 30px;
+        font-style: inherit;
     }
   </style>
 </head>
