--- a/piano/index.html
+++ b/piano/index.html
@@ -57,8 +57,9 @@
             </div>
         </div>
     </div>
-   
+   <button id="soundModeBtn">모드: Piano</button>
 <script src="index.js"></script>
+
 
 
     
